# deepdict

./: README.md  pyproject.toml
deepdict/: deepdict.py
tests/: test_deepdict.py
