[tool.poetry]
name = "deepdict"
version = "0.2.0"
description = ""
authors = ["Yampolskiy Dmitriy <yampolskiydv@gmail.com>"]

[tool.poetry.dependencies]
python = "3.*,>=3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fissix = "^19.2b1"
dephell = {extras = ["full"], version = "^0.8.2"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
